Fixing issue where swaggerdocument.js could not mount extra ui elements onto swagger-ui plus cleaning up truncatable-div.jsx (better variables names, etc.)

--- a/src/style/_information.scss
+++ b/src/style/_information.scss
@@ -1,6 +1,3 @@
-
-
-
 .info
 {
     margin: 50px 0;
@@ -97,14 +94,14 @@
         }
     }
 
-    .description
+    .truncatable
     {
         background-color: white;
-        padding: 1px 25px;
+        padding: 15px 25px;
         position: relative;
     }
 
-    .truncatable 
+    .expanded 
     {
         overflow-y: auto;
     }
